--- a/services/docker-compose.yml
+++ b/services/docker-compose.yml
@@ -49,7 +49,6 @@ services:
     depends_on:
       - rabbit
   postgres:
-    restart: always
     image: postgres:10
     environment:
       - POSTGRES_USER=${POSTGRES_USER}
@@ -61,11 +60,33 @@ services:
       - "5432:5432"
   adminer:
     image: adminer
-    restart: always
     ports:
       - 18080:8080
     depends_on:
       - postgres
+  sidecar:
+    build:
+      context: ./sidecar
+      target: production
+    volumes:
+      - input:/input
+      - output:/output
+      - log:/log
+      - /var/run/docker.sock:/var/run/docker.sock
+    ports:
+      - "8000:8000"
+    environment:
+      - PYTHONPATH=/work/packages
+    environment:
+      - RABBITMQ_USER=${RABBITMQ_USER}
+      - RABBITMQ_PASSWORD=${RABBITMQ_PASSWORD}
+      - S3_ENDPOINT=${S3_ENDPOINT}
+      - S3_ACCESS_KEY=${S3_ACCESS_KEY}
+      - S3_SECRET_KEY=${S3_SECRET_KEY}
+      - S3_BUCKET_NAME=${S3_BUCKET_NAME}
+    depends_on:
+      - rabbit
+
 volumes:
   input:
   output:
