--- a/services/sidecar/requirements.txt
+++ b/services/sidecar/requirements.txt
@@ -1,7 +1,7 @@
-networkx==2.1
-sqlalchemy==1.2.7
-psycopg2==2.7.4
-celery==4.1.0
-sqlalchemy-json==0.2.1
+celery==4.2.0
 docker==3.3.0
+minio==4.0.0
+networkx==2.1
 pika==0.11.2
+psycopg2==2.7.4
+sqlalchemy==1.2.8
