--- a/services/docker-compose.debug.yml
+++ b/services/docker-compose.debug.yml
@@ -23,7 +23,8 @@ services:
       - './web/server/source:/usr/src/source'
       - './web/client/source-output:/usr/src/source/client'
       - './web/server/test:/usr/src/test'
-      # TODO: do test go in production or development or debug??
+      - ../packages:/usr/src/packages
+    # TODO: do test go in production or development or debug??
     #depends_on:
     #  - build-qx
   #--------------------------------------------------------------------
