rename source --> src

--- a/services/docker-compose.debug.yml
+++ b/services/docker-compose.debug.yml
@@ -20,7 +20,7 @@ services:
       - DIRECTOR_PORT=8001
       - SIMCORE_WEB_CONFIG=development
     volumes:
-      - './web/server/source:/usr/src/source'
+      - './web/server/src:/usr/src/source'
       - './web/client/source-output:/usr/src/source/client'
       - './web/server/test:/usr/src/test'
       - ../packages:/usr/src/packages
