--- a/services/web/client/docker-compose.yml
+++ b/services/web/client/docker-compose.yml
@@ -4,7 +4,7 @@ services:
     #image: itisfoundation/qooxdoo-compiler:latest
     image: client_qx:dev
     build:
-      # ToDo: development version doesn't work in Windows.
+      # TODO: development version doesn't work in Windows.
       #  Modified files in the mounted volume don't trigger container operating 
       # system notifications, so watchers don't react to changes.
       # Workaround: 
