--- a/services/web/client/docker-compose.yml
+++ b/services/web/client/docker-compose.yml
@@ -5,9 +5,9 @@ services:
     image: client_qx:dev
     build:
       # TODO: development version doesn't work in Windows.
-      #  Modified files in the mounted volume don't trigger container operating 
+      #  Modified files in the mounted volume don't trigger container operating
       # system notifications, so watchers don't react to changes.
-      # Workaround: 
+      # Workaround:
       # http://blog.subjectify.us/miscellaneous/2017/04/24/docker-for-windows-watch-bindings.html
       # On Windows side:
       # pip install docker-windows-volume-watcher
@@ -20,3 +20,4 @@ services:
     ports:
       - '8080:8080'
     working_dir: /home/node/client
+    entrypoint: ./scripts/entrypoint.sh --set qx.allowUrlSettings=true
