--- a/services/sidecar/Dockerfile
+++ b/services/sidecar/Dockerfile
@@ -6,7 +6,7 @@ WORKDIR /work/sidecar
 
 RUN apk add --no-cache postgresql-dev gcc libc-dev
 
-COPY requirements.txt requirements.txt
+COPY services/sidecar/requirements.txt requirements.txt
 
 RUN pip install --upgrade pip \
     && pip install -r requirements.txt \
@@ -28,6 +28,10 @@ ENV PYTHONPATH="/work/packages/simcore-sdk/src:/work/packages/s3wrapper/src"
 ENTRYPOINT celery -A sidecar worker -c 2 --loglevel=info
 
 FROM common as production
+
+# the context for the build is the git repo root directory
+COPY services/sidecar/src /work
+COPY packages /work/packages
 
 # NO clue why this does not work without explicitly specifying
 ENV PYTHONPATH="/work/packages/simcore-sdk/src:/work/packages/s3wrapper/src"
