--- a/services/docker-compose.yml
+++ b/services/docker-compose.yml
@@ -89,6 +89,14 @@ services:
       - S3_BUCKET_NAME=${S3_BUCKET_NAME}
     depends_on:
       - rabbit
+  minio:
+    image: minio/minio
+    environment:
+      - MINIO_ACCESS_KEY=12345678
+      - MINIO_SECRET_KEY=12345678
+    ports:
+      - "9001:9000"
+    command: server /data
 volumes:
   input:
   output:
