--- a/services/docker-compose.devel.yml
+++ b/services/docker-compose.devel.yml
@@ -11,33 +11,21 @@ services:
   webserver:
     image: services_webserver:dev
     build:
-      target: development
+      #target: development
+      target: common-py-stage
     ports:
       - '9081:8080'
-      #- '9082:9082'
     environment:
       - DIRECTOR_HOST=director
       - DIRECTOR_PORT=8001
       - SIMCORE_WEB_CONFIG=development
     volumes:
+      # FIXME: For the moment, client's source is copied also in dev
+      # - './web/client/source-output:/usr/src/source/client'
       - './web/server/src:/usr/src/source'
-      - './web/client/source-output:/usr/src/source/client'
-      - './web/server/test:/usr/src/test'
+      - './web/server/tests:/usr/src/tests'
+      # TODO: consider pip install git:
       - ../packages:/usr/src/packages
-    # TODO: do test go in production or development or debug??
-    #depends_on:
-    #  - build-qx
-  #--------------------------------------------------------------------
-  build-qx:
-    image: itisfoundation/qooxdoo-compiler:latest
-    volumes:
-      - './web/client:/home/node/src'
-    ports:
-      - '8080:8080'
-    working_dir: /home/node/src
-    entrypoint: /bin/bash
-    command: -c "qx contrib update && qx contrib list && qx contrib install ITISFoundation/qx-osparc-theme && qx compile --watch"
-
   #------------comp. backend-------------------------------------------
   sidecar:
     image: services_sidecar:dev
