--- a/services/web/client/docker-compose.yml
+++ b/services/web/client/docker-compose.yml
@@ -1,16 +1,17 @@
 version: '3.4'
 services:
   qx:
+    # BUILD_TARGET in [development, production]
     image: client_qx:${BUILD_TARGET:-development}
     build:
-      # ToDo: development version doesn't work in Windows.
+      # TODO: development version doesn't work in Windows.
       #  Modified files in the mounted volume don't trigger container operating
-      # system notifications, so watchers don't react to changes.
+      #  system notifications, so watchers don't react to changes.
       # Workaround:
-      # http://blog.subjectify.us/miscellaneous/2017/04/24/docker-for-windows-watch-bindings.html
+      #   http://blog.subjectify.us/miscellaneous/2017/04/24/docker-for-windows-watch-bindings.html
       # On Windows side:
-      # pip install docker-windows-volume-watcher
-      # docker-volume-watcher
+      #   pip install docker-windows-volume-watcher
+      #   docker-volume-watcher
       context: .
       dockerfile: Dockerfile
       target: ${BUILD_TARGET:-development}
@@ -18,4 +19,4 @@ services:
       - '.:/home/scu/client'
     ports:
       - '8080:8080'
-    working_dir: /home/node/client
+    working_dir: /home/scu/client
