--- a/services/web/client/Dockerfile.build
+++ b/services/web/client/Dockerfile.build
@@ -70,7 +70,7 @@ VOLUME /home/scu/client
 ENTRYPOINT ./scripts/entrypoint.sh
 
 # ------------------------------------------------------------------------------------------
-FROM base-stage as production
+FROM base-stage as build
 
 
 # 3. prepares scripts
