--- a/services/docker-compose.yml
+++ b/services/docker-compose.yml
@@ -17,21 +17,24 @@ services:
     volumes:
       - '/var/run/docker.sock:/var/run/docker.sock'
   #--------------------------------------------------------------------
+  build_client:
+    image: client_qx:build
+    build:
+      context: ./web/client/
+      dockerfile: Dockerfile
+      target: build
+    command: /bin/bash -c "cat build-output/version.txt"
   webserver:
     build:
       context: ../
-      dockerfile: services/web/server/Dockerfile
-      target: production
-      args:
-        client_dir: services/web/client
-        server_dir: services/web/server
+      dockerfile: services/web/Dockerfile.ci
     ports:
       - '9081:8080'
     environment:
       - DIRECTOR_HOST=director
       - DIRECTOR_PORT=8001
-      - SIMCORE_WEB_CONFIG=production
-      - PYTHONPATH=/usr/src/packages/simcore-sdk/src
+    depends_on:
+      - build_client
   #--------------------------------------------------------------------
   rabbit:
     image: rabbitmq:3-management
