--- a/services/web/client/Dockerfile
+++ b/services/web/client/Dockerfile
@@ -67,7 +67,10 @@ FROM base-stage as development
 VOLUME /home/scu/client
 
 # 3. installs contribs and qx serve -> source-output/
-ENTRYPOINT ./scripts/entrypoint.sh
+ENTRYPOINT ["./scripts/entrypoint.sh"]
+
+# 4. serves
+CMD ["serve"]
 
 # ------------------------------------------------------------------------------------------
 FROM base-stage as build
@@ -86,4 +89,6 @@ COPY --chown=scu:scu source source
 COPY --chown=scu:scu Manifest.json Manifest.json
 RUN qx compile --target=build
 
-CMD ["qx", "serve"]
+ENTRYPOINT []
+
+CMD ["qx"]
