Deploying Web-server in devel mode.  - Runs one service for the client and another for the web.  - Each service watches respective source code  - Minor renaming for consistency  - Added make down

--- a/services/docker-compose.devel.yml
+++ b/services/docker-compose.devel.yml
@@ -9,10 +9,8 @@ services:
       - './director/source:/home/app/source'
   #--------------------------------------------------------------------
   webclient:
-    image: client_qx:development
+    image: services_webclient:dev
     build:
-      context: ./web/client/
-      dockerfile: Dockerfile
       target: development
     volumes:
       - './web/client:/home/scu/client'
@@ -20,11 +18,11 @@ services:
   webserver:
     image: services_webserver:dev
     build:
-      context: ../
-      dockerfile: services/web/Dockerfile.dev
+      dockerfile: services/web/Dockerfile.devel
     volumes:
-      - './web/server:/home/scu/server'
-      - ../packages:/home/scu/packages
+      - ./web/server:/home/scu/server
+      - ./web/client:/home/scu/client
+      - ../packages/simcore-sdk/src:/home/scu/packages
     depends_on:
       - webclient
   #--------------------------------------------------------------------
