--- a/services/dy-2Dgraph/use-cases/docker-compose.yml
+++ b/services/dy-2Dgraph/use-cases/docker-compose.yml
@@ -3,27 +3,57 @@ services:
   cc-0d:
     build:
       context: cc
+      target: production
       args: 
         NOTEBOOK_NAME: cc_single_cell.ipynb
         NOTEBOOK_FOLDER_NAME: cc-single-cell
+    environment: 
+      - S3_ENDPOINT=${S3_ENDPOINT}
+      - S3_ACCESS_KEY=${S3_ACCESS_KEY}
+      - S3_SECRET_KEY=${S3_SECRET_KEY}
+      - S3_BUCKET_NAME=${S3_BUCKET_NAME}
+      - POSTGRES_ENDPOINT=${POSTGRES_ENDPOINT}
+      - POSTGRES_USER=${POSTGRES_USER}
+      - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
+      - POSTGRES_DB=${POSTGRES_DB}
     ports:
       - '1234:8888'
   #--------------------------------------------------------------------
   cc-1d:
     build:
       context: cc
+      target: production
       args: 
         NOTEBOOK_NAME: cc_oned.ipynb
-        NOTEBOOK_FOLDER_NAME: cc-oned
+        NOTEBOOK_FOLDER_NAME: cc-oned      
+    environment: 
+      - S3_ENDPOINT=${S3_ENDPOINT}
+      - S3_ACCESS_KEY=${S3_ACCESS_KEY}
+      - S3_SECRET_KEY=${S3_SECRET_KEY}
+      - S3_BUCKET_NAME=${S3_BUCKET_NAME}
+      - POSTGRES_ENDPOINT=${POSTGRES_ENDPOINT}
+      - POSTGRES_USER=${POSTGRES_USER}
+      - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
+      - POSTGRES_DB=${POSTGRES_DB}
     ports:
       - '1235:8888'
   #--------------------------------------------------------------------
   cc-2d:
     build:
       context: cc
+      target: production
       args: 
         NOTEBOOK_NAME: cc_2d.ipynb
         NOTEBOOK_FOLDER_NAME: cc-twod
+    environment: 
+      - S3_ENDPOINT=${S3_ENDPOINT}
+      - S3_ACCESS_KEY=${S3_ACCESS_KEY}
+      - S3_SECRET_KEY=${S3_SECRET_KEY}
+      - S3_BUCKET_NAME=${S3_BUCKET_NAME}
+      - POSTGRES_ENDPOINT=${POSTGRES_ENDPOINT}
+      - POSTGRES_USER=${POSTGRES_USER}
+      - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
+      - POSTGRES_DB=${POSTGRES_DB}
     ports:
       - '1236:8888'
   #--------------------------------------------------------------------
