added python script to create dummy tables and S3 structure

--- a/services/dy-2Dgraph/use-cases/cc/Dockerfile
+++ b/services/dy-2Dgraph/use-cases/cc/Dockerfile
@@ -69,6 +69,7 @@ RUN chmod +x boot.sh
 
 FROM common AS development
 ENV CREATE_DUMMY_TABLE=1
+COPY --chown=jovyan:users develdbs3init.py .
 CMD [ "/bin/sh", "boot.sh" ]
 
 FROM common AS production
