--- a/services/dy-2Dgraph/use-cases/docker-compose.yml
+++ b/services/dy-2Dgraph/use-cases/docker-compose.yml
@@ -16,6 +16,7 @@ services:
       - POSTGRES_USER=${POSTGRES_USER}
       - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
       - POSTGRES_DB=${POSTGRES_DB}
+      - SIMCORE_NODE_UUID=${SIMCORE_NODE_UUID}
     ports:
       - '1234:8888'
   #--------------------------------------------------------------------
@@ -35,6 +36,7 @@ services:
       - POSTGRES_USER=${POSTGRES_USER}
       - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
       - POSTGRES_DB=${POSTGRES_DB}
+      - SIMCORE_NODE_UUID=${SIMCORE_NODE_UUID}
     ports:
       - '1235:8888'
   #--------------------------------------------------------------------
@@ -54,6 +56,7 @@ services:
       - POSTGRES_USER=${POSTGRES_USER}
       - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
       - POSTGRES_DB=${POSTGRES_DB}
+      - SIMCORE_NODE_UUID=${SIMCORE_NODE_UUID}
     ports:
       - '1236:8888'
   #--------------------------------------------------------------------
